--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                 <input type="text" id="taskInput" placeholder="Escribe una tarea">
             </p>
             <button id="addTaskButton">Agregar Tarea</button>
+
+            <!-- <button   id="delTaskButton">eliminar Tarea</button> -->
+            
             <ul id="taskList"></ul>
+            
+            <!-- <li>Terminar curso de Fronted <button id="delTaskButton">🗑️</button> <button>✔️</button></li> -->
         </div>
     </main>
 
